Modified to variable

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -5,7 +5,7 @@ src/ejs/template/_head %>
 <% include src/ejs/template/_header %>
 
 <main class="l-main">
-  <div class="l-top-heading">
+  <div class="p-top-heading">
     <div class="p-top-heading__block" id="fluffy_disappear">
       <div class="p-top-heading__circle--LINE">
         <h3 class="p-top-heading__catchPhrase"><span class="p-top-heading__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
@@ -30,7 +30,7 @@ src/ejs/template/_head %>
     </div><!-- /.p-top-heading__block -->
   </div><!-- /.l-top-heading -->
 
-  <div class="l-top-aboutService" id="aboutService">
+  <div class="p-top-aboutService" id="aboutService">
     <div class="p-top-aboutService__explain">
       <div class="p-top-aboutService__bgLogo">
         <% var aboutServicebgLogo=['T', 'T', 'J']; %>
@@ -146,7 +146,7 @@ src/ejs/template/_head %>
       </ul>
     </div><!-- /.p-top-project -->
 
-  <div class="l-top-entry">
+  <div class="p-top-entry">
     <p class="p-top-entry__text">
       まずはお気軽に、<br> <span class="p-top-entry__text--line">LINE</span><br>にてご登録下さい！
     </p>
@@ -158,7 +158,7 @@ src/ejs/template/_head %>
     <a class="c-top-toLINE" href="#">LINE公式アカウントを登録する</a>
   </div>
 
-  <div class="l-top-faq">
+  <div class="p-top-faq">
     <h1 class="p-top-faq__title">FAQ</h1>
     <% var question = [
       'フリーランスエージェントとはどういうサービスですか？', 'TTJのサービス利用料金は発生しますか？', '自分のスキルに見合った案件へ就けますか？', '実務未経験ですが案件紹介は可能でしょうか？',
