--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -10,19 +10,44 @@
 // -----------------------------------------------------------------*/
 
 .p-top-heading {
+  position: relative;
   display: flex;
   align-items: center;
   padding: 100px 0;
-  background: url(#{$bgPath}many_people.jpg) no-repeat center/cover;
-  background-attachment: fixed;
+  // background: url(#{$bgPath}many_people.jpg) no-repeat center/cover;
+  // background-attachment: fixed;
   // background: linear-gradient(25deg, rgba(#FC9D9D, 0.4), rgba(#C5E99B, 0.4)) ,url(#{$bgPath}sea_morudibu.jpg) no-repeat center/cover;
+  &::before {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: url(#{$bgPath}many_people.jpg) no-repeat 30%/cover;
+    content: '';
+    z-index: -2;
+  }
+
+  &::after {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(to bottom, transparent 0%, transparent 50%, #fff 100%), url(#{$bgPath}many_people.jpg) no-repeat 30%/cover;
+    content: '';
+    z-index: -1;
+  }
+
   @include mq('u-pc') {
-    padding-left: 0;
     flex-direction: column;
     background-size: 100% 100%;
     background-position: bottom;
     padding-top: 10px;
   }
+
 }
 
 .p-top-heading__block {
@@ -41,9 +66,15 @@
   }
 }
 
-.p-top-heading__circle--day { @include circlePattern(day); }
-.p-top-heading__circle--match { @include circlePattern(match); }
-.p-top-heading__circle--LINE { @include circlePattern(line); }
+.p-top-heading__circle--day {
+  @include circlePattern(day);
+}
+.p-top-heading__circle--match {
+  @include circlePattern(match);
+}
+.p-top-heading__circle--LINE {
+  @include circlePattern(line);
+}
 
 .p-top-heading__catchPhrase {
   position: absolute;
@@ -104,7 +135,8 @@
   align-items: center;
 
   @include mq('u-sp') {
-    width: 90%;
+    width: 100%;
+    justify-content: initial;
   }
 }
 
@@ -120,7 +152,7 @@
 .p-top-aboutService {
   color: $colorBlack;
   padding: 100px;
-  background: linear-gradient(180deg, #e4e4e4 90%, $colorWhite);
+  // background: linear-gradient(180deg, #e4e4e4 90%, $colorWhite);
 
   @include mq(u-pc) {
     padding: 60px 20px;
@@ -139,7 +171,7 @@
 }
 
 .p-top-aboutService__bgLogo {
-  font-family: 'Hannotate SC','ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
+  font-family: 'Hannotate SC', 'ヒラギノ角ゴシック', 'Hiragino Sans', sans-serif;
   font-size: 520px;
   font-weight: bold;
   color: rgba(105, 105, 105, 0.2);
@@ -160,9 +192,13 @@
   }
 }
 
-.p-top-aboutService__bgLogo__list--red { color: rgba($colorDeepRed, 0.2); }
+.p-top-aboutService__bgLogo__list--red {
+  color: rgba($colorDeepRed, 0.2);
+}
 
-.p-top-aboutService__bgLogo__list--blue { color: rgba($colorDeepBlue, 0.2); }
+.p-top-aboutService__bgLogo__list--blue {
+  color: rgba($colorDeepBlue, 0.2);
+}
 
 .p-top-aboutService__imgBlock {
   width: 60%;
@@ -181,7 +217,8 @@
   transform: scale(0);
   filter: drop-shadow(10px 10px 10px $colorBlack); // オブジェクトの形に沿って影
 
-  @include mq('u-pc') { // スマホ・タブではフェードインなし
+  @include mq('u-pc') {
+    // スマホ・タブではフェードインなし
     opacity: 1;
     transform: scale(1);
   }
@@ -216,13 +253,14 @@
   opacity: 0;
   position: relative;
   top: 50px;
-  transition: .5s;
+  transition: 0.5s;
 
   &:last-child {
     margin-bottom: 0;
   }
 
-  @include mq('u-pc') { // スマホ・タブではフェードインなし
+  @include mq('u-pc') {
+    // スマホ・タブではフェードインなし
     top: 0;
     margin-bottom: 50px;
     opacity: 1;
@@ -236,7 +274,11 @@
 }
 
 .p-top-aboutService__text--modifier {
-  background: linear-gradient(transparent 70%, $colorDeepBlue 85%, $colorDeepRed 100%);
+  background: linear-gradient(
+    transparent 70%,
+    $colorDeepBlue 85%,
+    $colorDeepRed 100%
+  );
 }
 
 .p-top-aboutService__entry {
@@ -303,35 +345,59 @@
 /*// -----------------------------------------------------------------
 // .p-top-flowUpToWork
 // -----------------------------------------------------------------*/
-.p-top-flowUpToWork { margin: 0 auto; }
+.p-top-flowUpToWork {
+  margin: 0 auto;
+  padding: 20px 0 100px;
+  background-color: $colorWhite;
+}
 
 @mixin blueAndRedTitle {
+  display: flex;
   position: relative;
-  margin: 30px 0 100px 0;
+  justify-content: center;
+  align-items: center;
   font-size: 36px;
+  font-weight: bold;
   text-align: center;
-  letter-spacing: 8px;
+  letter-spacing: 6px;
+  margin-bottom: 40px;
 
   @include mq('u-sp') {
-    font-size: 25px;
+    font-size: 22px;
+    margin-bottom: 20px;
   }
 
-  &::before, &::after {
+  &::before,
+  &::after {
     position: absolute;
     display: block;
-    top: 50%;
-    width: 32vw;
+    width: 25vw;
     height: 10%;
     content: '';
 
     @include mq('u-sp') {
-      width: 27vw;
+      width: 15vw;
     }
+  }
+
+  &::before {
+    margin-right: 100px;
+  }
+
+  &::after {
+    margin-left: 100px;
   }
 }
 
 .p-top-flowUpToWork__heading {
+  display: inline-block;
+  font-size: 35px;
+
   @include blueAndRedTitle;
+
+  @include mq('u-sp') {
+    margin: 0 auto 40px;
+  }
 
   &::before {
     left: 0;
@@ -347,117 +413,103 @@
 .p-top-flowUpToWork__menu {
   display: flex;
   justify-content: center;
-  // width: 80%;
-  margin: 0 auto 100px auto;
+  width: 95%;
+  margin: 0 auto;
 
   @include mq('u-sp') {
     position: relative;
     flex-direction: column;
     align-items: center;
-    width: 70%;
-    background-color: $colorBlack;
-
-    &::before, &::after {
-      position: absolute;
-      display: block;
-      border-style: solid;
-      content: '';
-    }
-
-    &::before {
-      top: 0;
-      left: 0;
-      border-width: 360px 100px 0 0;
-      border-color: $colorWhite transparent transparent transparent;
-    }
-
-    &::after {
-      top: 0;
-      right: 0;
-      border-width: 360px 0 0 100px;
-      border-color: $colorWhite transparent transparent transparent;
-    }
+    width: 80%;
   }
 }
 
 .p-top-flowUpToWork__list {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 220px;
+  padding: 10px 0 60px;
 
   @include mq('u-sp') {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    width: 50%;
-    height: 2%;
-    color: $colorWhite;
-    // background-color: #000;
+    padding: 20px;
   }
 
-  &:nth-last-child(n+2) {
+  &:nth-last-child(n + 2) {
     position: relative;
-    @include mq('u-sp') {
-      margin-bottom: 20px;
+
+    // 矢印
+    &::after {
+      position: absolute;
+      display: block;
+      width: 20px;
+      height: 20px;
+      transform: rotate(45deg);
+      background-color: $colorWhite;
+      z-index: 1;
+      content: '';
     }
 
-    &::before { // 矢印 棒
-      @include mq('o-sp') {
-        position: absolute;
-        display: block;
-        background-color: $colorBlack;
-        top:  15px;
+    @include mq('o-sp') {
+      border-right: 1px solid rgba($colorGray, 0.3);
+
+      &::after {
+        top: 90px;
         right: -10px;
-        width: 3vw;
-        height: 1vh;
-        content: '';
+        border-top: 1px solid rgba($colorGray, 0.3);
+        border-right: 1px solid rgba($colorGray, 0.3);
       }
     }
 
-    &::after { // 矢印 三角形
-      @include mq('o-sp') {
-        position: absolute;
-        display: block;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-color: transparent transparent transparent $colorBlack;
-        top: 10px;
-        right: -20px;
-        border-width: 10px 0 10px 20px;
-        content: '';
+    @include mq('u-sp') {
+      border-bottom: 1px solid rgba($colorGray, 0.3);
+
+      &::after {
+        bottom: -10px;
+        border-right: 1px solid rgba($colorGray, 0.3);
+        border-bottom: 1px solid rgba($colorGray, 0.3);
       }
     }
+
   }
+}
+
+.p-top-flowUpToWork__list__inner {
+  display: flex;
 }
 
 .p-top-flowUpToWork__list__order {
-  text-align: center;
+  margin:0 10px;
+}
 
-  @include mq('u-sp') {
-    height: initial;
-    transform: skewX(15deg);
-  }
+.p-top-flowUpToWork__list__order--step {
+  font-size: 13px;
+  margin-bottom: -5px;
+}
+
+.p-top-flowUpToWork__list__order--num {
+  font-size: 30px;
 }
 
 .p-top-flowUpToWork__list__txt {
-  height: 15vh;
+  align-self: center;
   font-size: 16px;
-  text-align: center;
-  margin-bottom: 10px;
-
-  @include mq('u-sp') {
-    font-size: 36px;
-    height: initial;
-  }
 }
 
 .p-top-flowUpToWork__list__image {
+  width: 70px;
+  height: 70px;
+  margin: auto auto 0;
   object-fit: contain;
-  width: 10vw;
-  height: 10vh;
-  margin: 0 auto;
+
+  @include mq('u-sp') {
+    width: 45px;
+    height: 45px;
+    margin: 0 0 0 auto;
+  }
 }
 
 /*// -----------------------------------------------------------------
@@ -482,7 +534,8 @@
     width: 50%;
   }
 
-  &:first-child { // ピラミッド型にするため1つ目の要素をほんの少し大きく
+  // ピラミッド型にするため1つ目の要素をほんの少し大きく
+  &:first-child {
     @include mq('u-sp') {
       width: 51%;
     }
@@ -492,7 +545,7 @@
 .p-top-pieItem__category {
   text-align: center;
   font-size: 25px;
-  opacity: .6;
+  opacity: 0.6;
   margin-bottom: 10px;
 
   @include mq('u-sp') {
@@ -510,7 +563,9 @@
 // .p-top-project
 // -----------------------------------------------------------------*/
 
-.p-top-project { margin-bottom: 100px; }
+.p-top-project {
+  background-color: $colorWhite;
+}
 
 /*
   .p-top-project__heading
@@ -530,7 +585,9 @@
   }
 }
 
-.p-top-project__heading--bold { font-weight: bold; }
+.p-top-project__heading--bold {
+  font-weight: bold;
+}
 
 .p-top-project__subTitle {
   margin-bottom: 150px;
@@ -547,43 +604,60 @@
   margin: 0 auto;
 
   @include mq('u-sp') {
-    width: 90%;
-    flex-direction: column;
-    align-items: center;
+    width: 95%;
+    margin: 0 auto;
+    // padding-bottom: 30px;
   }
 }
 
 /*
   .p-top-project__listItem
 ---------------------------------------------------- */
-.p-top-project__listItem__margin {
-  margin-right: 10px;
-  outline: none;
+.p-top-project__listItem__inner {
+  margin: 0 5px;
   border: 1px solid #9e9e9e;
-  @include mq('u-smSp') {
-    margin-right: 0;
-  }
 }
 
 .p-top-project__listItem__about {
+  margin-bottom: 30px;
   padding: 40px;
   letter-spacing: 3px;
-  background-color: rgba($colorGray, .1);
+  background-color: rgba($colorGray, 0.1);
 }
 
-.p-top-project__listItem__feature { margin-bottom: 20px; }
-
-.p-top-project__listItem__feature > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.p-top-project__listItem__feature {
+  width: 80%;
+  margin: 0 auto 40px;
 }
-
 
 /*
   .p-top-project__list__income
 -----------------------------------------------------------------*/
-.p-top-project__listItem__incomeBlock { padding: 10px; }
+.p-top-project__listItem__income {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+
+  // &::before, &::after {
+  //   display: block;
+  //   position: absolute;
+  //   top: 50%;
+  //   width: 30px;
+  //   height: 5px;
+  //   background-color: $colorBlack;
+  //   content: '';
+  // }
+
+  // &::before {
+  //   transform: rotate(45deg);
+  // }
+
+  // &::after {
+  //   transform: rotate(-45deg);
+  // }
+}
 
 .p-top-project__listItem__income__monthly {
   @include projectIcon(money);
@@ -603,6 +677,7 @@
   font-size: 25px;
   font-weight: bold;
   color: $colorDeepRed;
+
   @include mq('u-smSp') {
     font-size: 20px;
   }
@@ -614,13 +689,12 @@
 
 .p-top-project__listItem__working {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
 .p-top-project__listItem__working__week {
   @include projectIcon(calender);
-  margin-left: -37px;
 
   @include mq('u-smSp') {
     margin-left: -28px;
@@ -664,7 +738,7 @@
   background-color: $colorWhite;
   line-height: 14px;
 
-  &:nth-last-child(n+2) {
+  &:nth-last-child(n + 2) {
     margin-right: 5px;
   }
 
@@ -675,11 +749,11 @@
   @include mq('u-smSp') {
     width: calc(100% / 2 - 30px);
 
-    &:nth-child(n+3) {
+    &:nth-child(n + 3) {
       margin-top: 10px;
     }
 
-    &:nth-last-child(n+2) {
+    &:nth-last-child(n + 2) {
       margin-right: 0;
     }
 
@@ -693,13 +767,22 @@
 //  p-top-entry
 // -----------------------------------------------------------------*/
 
-.p-top-entry { @extend .p-top-aboutService__entry; }
+.p-top-entry {
+  @extend .p-top-aboutService__entry;
+  background-color: $colorWhite;
+}
 
-.p-top-entry__text { @extend .p-top-aboutService__entryBlock__text; }
+.p-top-entry__text {
+  @extend .p-top-aboutService__entryBlock__text;
+}
 
-.p-top-entry__text--line { @extend .p-top-aboutService__entryBlock__text--line; }
+.p-top-entry__text--line {
+  @extend .p-top-aboutService__entryBlock__text--line;
+}
 
-.p-top-entry__arrowBlock { overflow: hidden; }
+.p-top-entry__arrowBlock {
+  overflow: hidden;
+}
 
 /*// -----------------------------------------------------------------
 //  p-top-faq
@@ -725,6 +808,7 @@
 
 .p-top-faq {
   padding-bottom: 100px;
+  background-color: $colorWhite;
 
   @include mq(u-sp) {
     padding: 0 30px 100px;
@@ -756,7 +840,9 @@
   padding: 30px;
   position: relative;
 
-  &:not(:nth-last-child(-n+3)) { margin-bottom: 30px; }
+  &:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
 
   @include mq('o-pc') {
     &:hover {
@@ -765,18 +851,17 @@
       }
     }
   }
-
 }
 
 // Questionの背景
 .p-top-faqPC__questionList__titleNum {
-  opacity: .2;
+  opacity: 0.2;
   color: $colorWhite;
   font-size: 100px;
   position: absolute;
   bottom: -20px;
   right: 0;
-  transition: 1.0s;
+  transition: 1s;
 }
 
 .p-top-faqPC__questionList__title {
@@ -800,7 +885,13 @@
   width: 60%;
   margin: 0 auto;
   border: solid 1px $colorBlack;
-  background: linear-gradient(-60deg, #ec8c8c 2%,$colorWhite 8%,$colorWhite 92%,#c4fcfc 98%);
+  background: linear-gradient(
+    -60deg,
+    #ec8c8c 2%,
+    $colorWhite 8%,
+    $colorWhite 92%,
+    #c4fcfc 98%
+  );
   padding: 20px;
   border-radius: 10px;
   position: fixed;
@@ -826,7 +917,7 @@
 
 .crossIcon {
   margin: 0 auto;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .p-top-faqPC__crossIcon {
@@ -858,7 +949,9 @@
   height: 100%;
 }
 
-.nonScroll { overflow: hidden; } // モーダル表示時：スクロール×
+.nonScroll {
+  overflow: hidden;
+} // モーダル表示時：スクロール×
 
 /*
   p-top-faqSP
@@ -874,7 +967,6 @@
 
 .p-top-faqSP__list {
   @include mq('u-sp') {
-
     &:not(last-child) {
       margin-bottom: 10px;
     }
@@ -898,12 +990,12 @@
 
     &::before {
       content: '\f35a';
-      font-family: "Font Awesome 5 Free";
+      font-family: 'Font Awesome 5 Free';
       font-weight: 900;
       position: absolute;
       top: 50%;
       left: -25px;
-      margin-top: -.5em; // 文字1文字の半分のネガティブマージン
+      margin-top: -0.5em; // 文字1文字の半分のネガティブマージン
     }
   }
 }
@@ -911,7 +1003,13 @@
 .p-top-faqSP__answer {
   @include mq('u-sp') {
     display: none;
-    background: linear-gradient(-60deg, #ec8c8c 2%,$colorWhite 8%,$colorWhite 92%,#c4fcfc 98%);
+    background: linear-gradient(
+      -60deg,
+      #ec8c8c 2%,
+      $colorWhite 8%,
+      $colorWhite 92%,
+      #c4fcfc 98%
+    );
     border-radius: 0 0 30px 30px;
     padding: 20px 30px;
   }
@@ -919,7 +1017,6 @@
 
 .arrowTransform {
   @include mq('u-sp') {
-
     &::before {
       transform: rotate(90deg);
     }
