--- a/src/ejs/template/_head.ejs
+++ b/src/ejs/template/_head.ejs
@@ -23,6 +23,8 @@
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"> <!-- font -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title><%= title %></title>
 </head>
