--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -9,3 +9,61 @@
 .c-top-toLINE {
   @include firstViewBtn(line);
 }
+
+.c-btn-square__toLINE {
+  display: flex;
+  align-items: center;
+  padding: 1em 2em;
+  text-decoration: none;
+  background: $colorWhite;
+  box-shadow: 7px 7px 2px rgba(0, 0, 0, .7);
+  border: solid 5px $colorGreen;
+  border-radius: 3px;
+  font-weight: bold;
+  overflow: hidden;
+  font-size: 20px;
+  transform: skew(-10deg);
+  vertical-align: middle;
+  position: relative;
+  font-family: 'Kosugi Maru', sans-serif;
+
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    content: '';
+    width: 120%;
+    height: 100%;
+    background: $colorGreen;
+    transform-origin: right top;
+    transform: skewX(-30deg) scale(0, 1);
+    transition: transform .3s;
+  }
+
+  @include mq('u-sp') {
+    font-size: 15px;
+  }
+
+  &:hover {
+    transform: skew(-10deg);
+    color: $colorWhite;
+
+    &:before {
+      transform-origin: left top;
+      transform: skewX(-30deg) scale(1, 1);
+    }
+
+    .c-top-aboutService__lineIcon {
+      color: $colorWhite;
+    }
+  }
+}
+
+.c-top-aboutService__lineIcon {
+  width: 50px;
+  height: 50px;
+  padding-right: 10px;
+  color: $colorGreen;
+  transform: skew(10deg);
+}
