--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -15,7 +15,8 @@
   padding: 100px 0;
   background: url(#{$bgPath}many_people.jpg) no-repeat center/cover;
   background-attachment: fixed;
-  // background: linear-gradient(25deg, rgba(#FC9D9D, 0.4), rgba(#C5E99B, 0.4)) ,url(#{$bgPath}sea_morudibu.jpg) no-repeat center/cover;
+  font-family: 'Kosugi Maru', sans-serif;
+
   @include mq('u-pc') {
     padding-left: 0;
     flex-direction: column;
@@ -119,12 +120,19 @@
 
 .p-top-aboutService {
   color: $colorBlack;
-  padding: 100px;
+  padding: 100px 50px;
   background: linear-gradient(180deg, #e4e4e4 90%, $colorWhite);
 
   @include mq(u-pc) {
     padding: 60px 20px;
   }
+}
+
+.p-top-aboutService__title {
+  text-align: center;
+  font-size: 45px;
+  margin-bottom: 100px;
+  text-shadow: 1px 3px 3px #ffc042;
 }
 
 .p-top-aboutService__explain {
@@ -140,7 +148,7 @@
 
 .p-top-aboutService__bgLogo {
   font-family: 'Hannotate SC','ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
-  font-size: 520px;
+  font-size: 450px;
   font-weight: bold;
   color: rgba(105, 105, 105, 0.2);
   position: absolute;
@@ -151,18 +159,32 @@
   justify-content: space-between;
 
   @include mq('u-pc') {
-    font-size: 300px;
+    font-size: 250px;
     flex-direction: column;
   }
 
   @include mq('u-sp') {
-    font-size: 220px;
+    font-size: 200px;
   }
 }
 
-.p-top-aboutService__bgLogo__list--red { color: rgba($colorDeepRed, 0.2); }
+.p-top-aboutService__bgLogo__list--red {
+  color: rgba($colorDeepRed, 0.2);
+  transition: 5.0s;
+}
 
-.p-top-aboutService__bgLogo__list--blue { color: rgba($colorDeepBlue, 0.2); }
+.p-top-aboutService__bgLogo__list--blue {
+  color: rgba($colorDeepBlue, 0.2);
+  transition: 5.0s;
+}
+
+.p-top-aboutService__bgLogo__list--white {
+  transition: 5.0s;
+}
+
+.bgLogoToBig {
+  transform: scale(1.4);
+}
 
 .p-top-aboutService__imgBlock {
   width: 60%;
@@ -208,7 +230,6 @@
 }
 
 .p-top-aboutService__text {
-  // font-family: "Sawarabi Mincho";
   text-align: center;
   margin-bottom: 100px;
   text-shadow: 1px 3px 3px #ffc042;
@@ -221,6 +242,10 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  // &:first-child {
+  //   font-size: 40px;
+  // }
 
   @include mq('u-pc') { // スマホ・タブではフェードインなし
     top: 0;
@@ -236,7 +261,11 @@
 }
 
 .p-top-aboutService__text--modifier {
-  background: linear-gradient(transparent 70%, $colorDeepBlue 85%, $colorDeepRed 100%);
+  color: $colorWhite;
+  text-shadow: 2px  2px 10px #777,
+              -2px  2px 10px #777,
+               2px -2px 10px #777,
+              -2px -2px 10px #777;
 }
 
 .p-top-aboutService__entry {
@@ -245,7 +274,7 @@
   align-items: center;
   text-align: center;
 
-  @include mq('u-sp') {
+  @include mq('u-pc') {
     flex-direction: column;
   }
 }
@@ -253,14 +282,14 @@
 .p-top-aboutService__entryBlock__text {
   font-size: 20px;
 
-  @include mq('u-sp') {
+  @include mq('u-pc') {
     margin-bottom: 50px;
   }
 }
 
 .p-top-aboutService__entryBlock__text--line {
-  color: $colorDeepGreen;
-  text-shadow: 2px 4px 7px $colorDeepGreen;
+  color: $colorGreen;
+  text-shadow: 2px 4px 7px $colorGreen;
   font-size: 100px;
   font-weight: 900;
 }
@@ -269,7 +298,7 @@
   width: 200px;
   overflow: hidden;
 
-  @include mq('u-sp') {
+  @include mq('u-pc') {
     margin-bottom: 30px;
   }
 }
@@ -284,7 +313,7 @@
     color: $colorGray;
   }
 
-  @include mq('u-sp') {
+  @include mq('u-pc') {
     transform: rotate(90deg);
     letter-spacing: 10px;
     right: 0;
@@ -295,7 +324,7 @@
 .arrowMoveToRight {
   right: 0;
 
-  @include mq('u-sp') {
+  @include mq('u-pc') {
     bottom: 0;
   }
 }
@@ -690,18 +719,6 @@
 }
 
 /*// -----------------------------------------------------------------
-//  p-top-entry
-// -----------------------------------------------------------------*/
-
-.p-top-entry { @extend .p-top-aboutService__entry; }
-
-.p-top-entry__text { @extend .p-top-aboutService__entryBlock__text; }
-
-.p-top-entry__text--line { @extend .p-top-aboutService__entryBlock__text--line; }
-
-.p-top-entry__arrowBlock { overflow: hidden; }
-
-/*// -----------------------------------------------------------------
 //  p-top-faq
 // -----------------------------------------------------------------*/
 
@@ -726,7 +743,7 @@
 .p-top-faq {
   padding-bottom: 100px;
 
-  @include mq(u-sp) {
+  @include mq('u-sp') {
     padding: 0 30px 100px;
   }
 }
@@ -931,3 +948,20 @@
     line-height: 35px;
   }
 }
+
+/*// -----------------------------------------------------------------
+//  p-top-entry
+// -----------------------------------------------------------------*/
+
+.p-top-entry {
+  @extend .p-top-aboutService__entry;
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.p-top-entry__text { @extend .p-top-aboutService__entryBlock__text; }
+
+.p-top-entry__text--line { @extend .p-top-aboutService__entryBlock__text--line; }
+
+.p-top-entry__arrowBlock { overflow: hidden; }
