--- a/src/ejs/template/_footer.ejs
+++ b/src/ejs/template/_footer.ejs
@@ -6,7 +6,7 @@
     <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
   <div class="c-footerPC-corporate">
-    <a class="c-footerPC-corporate__link" href="#">
+    <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
       <img src="<%= img_path %>ttj.banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
     </a>
   </div>
@@ -14,7 +14,7 @@
 
 <footer  class="l-footerSP" id="footer">
   <p class="c-footerSP-text">↓詳しい弊社概要は下記をクリック↓</p>
-  <a class="c-footerSP-corporate__link" href="#">
+  <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
     <img src="<%= img_path %>ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
   </a>
   <img src="<%= img_path %>trust.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
