--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -36,6 +36,7 @@
   text-align: center;
   position: relative;
   padding: 30px;
+  background-color: $colorWhite;
 
   &:before, &:after {
     position: absolute;
