--- a/src/scss/foundation/_var.scss
+++ b/src/scss/foundation/_var.scss
@@ -47,6 +47,7 @@ $colorOrange: #ffc042;
   height: 250px;
   border-radius: 50%;
   letter-spacing: 3px;
+  line-height: 1.5;
 
   @include mq('u-pc') {
     width: 200px;
@@ -143,14 +144,14 @@ $colorOrange: #ffc042;
     &::before {
       width: 45px;
       height: 45px;
-      left: -40px;
+      left: -45px;
       background-image: url(#{$bgPath}money.png);
     }
 
     @include mq('u-sp') {
       &::before {
         top: -1px;
-        left: -20px;
+        left: -30px;
         width: 30px;
         height: 30px;
       }
@@ -161,7 +162,7 @@ $colorOrange: #ffc042;
     &::before {
       width: 30px;
       height: 30px;
-      left: -48px;
+      left: -40px;
       background-image: url(#{$bgPath}calendar_1.png);
     }
 
