--- a/src/ejs/template/_footer.ejs
+++ b/src/ejs/template/_footer.ejs
@@ -13,7 +13,7 @@
 </footer>
 
 <footer  class="l-footerSP" id="footer">
-  <p class="c-footerSP-text">↓詳しい弊社概要は下記をクリック↓</p>
+  <p class="c-footerSP-text">↓弊社概要は下記をクリック↓</p>
   <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
     <img src="<%= img_path %>ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
   </a>
