--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -370,7 +370,7 @@
 // -----------------------------------------------------------------*/
 .p-top-flowUpToWork {
   margin: 0 auto;
-  padding: 20px 0 100px;
+  padding: 150px 0 100px;
   background-color: $colorWhite;
 }
 
@@ -1017,15 +1017,66 @@
 // -----------------------------------------------------------------*/
 
 .p-top-entry {
-  @extend .p-top-aboutService__entry;
-
   margin: 0 auto;
-  padding: 0 30px 100px 30px;
-  background-color: $colorWhite;
+  position: relative;
+  overflow: hidden;
+
+  &:before {
+    content: '';
+    display: block;
+    width: 100vw;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 1s;
+    background: url('#{$bgPath}sea_morudibu.jpg');
+    background-position: bottom;
+  }
+
+  &:hover {
+    &:before {
+      transform: scale(1.05);
+    }
+  }
 }
 
-.p-top-entry__text { @extend .p-top-aboutService__entryBlock__text; }
+.p-top-entry__mask {
+  width: 100%;
+  height: 100%;
+  padding: 200px 50px;
+  background: rgba(255,255,255,0.5);
+  position: relative;
 
-.p-top-entry__text--line { @extend .p-top-aboutService__entryBlock__text--line; }
+  @include mq('o-pc') {
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+  }
 
-.p-top-entry__arrowBlock { overflow: hidden; }
+  @include mq('u-pc') {
+    padding: 100px 20px;
+  }
+}
+
+.p-top-entry__text {
+  text-shadow: 1px 3px 3px #ffc042;
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 100px;
+}
+
+.p-top-entry__text--line {
+  color: $colorWhite;
+  text-shadow: 2px 2px 10px #777, -2px 2px 10px #777, 2px -2px 10px #777, -2px -2px 10px #777;
+  font-size: 100px;
+}
+
+.p-top-entry__btn {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+
+  @include mq('u-pc') {
+    width: 100%;
+  }
+}
