--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -10,7 +10,7 @@ src/ejs/template/_head %>
       <div class="p-top-fixed__circle--LINE">
         <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
       </div><!-- /.p-top-fixed__circle -->
-      <img src="<%= imgPath %>trust.png" class="p-top-fixed__titleImg" alt="トラストのロゴ">
+      <img src="<%= imgPath %>logo_ttj.png" class="p-top-fixed__titleImg" alt="トラストのロゴ">
       <div class="p-top-fixed__horizontal">
         <div class="p-top-fixed__circle--match">
           <h3 class="p-top-fixed__catchPhrase">希望案件<br>マッチ率<span class="p-top-fixed__catchPhrase--bold">97</span>％</h3>
@@ -18,7 +18,7 @@ src/ejs/template/_head %>
         <div class="p-top-fixed__vertical u-hidden-sp">
           <a class="c-top-toProject" id="toProjectSP" href="#">案件を見てみる！！</a>
           <a class="c-btn-square__toLINE" href="https://lin.ee/Os4sS5W">
-            <img src="<%= imgPath %>LINE_APP.png" class="c-btn-lineIcon" alt="LINEのロゴ">
+            <img src="<%= imgPath %>icon_line.png" class="c-btn-lineIcon" alt="LINEのロゴ">
             LINE公式アカウントを登録する
           </a>
         </div>
@@ -29,7 +29,7 @@ src/ejs/template/_head %>
       <div class="p-top-fixed__vertical u-hidden-pc">
         <a class="c-top-toProject" id="toProjectPC" href="#">案件を見てみる！！</a>
         <a class="c-btn-square__toLINE" href="https://lin.ee/Os4sS5W">
-          <img src="<%= imgPath %>LINE_APP.png" class="c-btn-lineIcon" alt="LINEのロゴ">
+          <img src="<%= imgPath %>icon_line.png" class="c-btn-lineIcon" alt="LINEのロゴ">
           LINE公式アカウントを登録する
         </a>
       </div>
@@ -49,12 +49,12 @@ src/ejs/template/_head %>
         <% } %>
       </div>
       <div class="p-top-aboutService__imgBlock">
-        <img src="<%= imgPath %>sikou.png" class="p-top-aboutService__img" id="aboutServiceImg" alt="人の吹き出し">
+        <img src="<%= imgPath %>img_sikou.png" class="p-top-aboutService__img" id="aboutServiceImg" alt="人の吹き出し">
       </div>
       <ul class="p-top-aboutService__textBlock">
         <% var aboutServiceText = [
           '営業に時間をかけたくない、今の現場からステップアップしたい、そもそも単価の相場もわからない…etc',
-          'それぞれのニーズに沿った提案はもちろん、<span class="p-top-aboutService__text--modifier">業務開始までしっかりサポート</span>致します。',
+          'それぞれのニーズに沿った提案はもちろん<br><span class="p-top-aboutService__text--modifier">業務開始までしっかりサポート</span>致します。',
           'もう案件探しで悩まない<span class="p-top-aboutService__text--modifier">【自走できるエンジニア】</span>へ…!!'
         ]; %>
         <% for (var i = 0; i < aboutServiceText.length; i++) { %>
@@ -72,7 +72,7 @@ src/ejs/template/_head %>
         <% } %>
       </div>
       <a class="c-btn-square__toLINE" href="https://lin.ee/Os4sS5W">
-        <img src="<%= imgPath %>LINE_APP.png" class="c-btn-lineIcon" alt="LINEのロゴ">
+        <img src="<%= imgPath %>icon_line.png" class="c-btn-lineIcon" alt="LINEのロゴ">
         LINE公式アカウントを登録する
       </a>
     </div>
@@ -83,13 +83,13 @@ src/ejs/template/_head %>
       <h1 class="p-top-flowUpToWork__heading">お仕事までの流れ</h1>
       <ul class="p-top-flowUpToWork__menu">
         <% var flow = [
-          {'flowNum': '01', 'flowImage': 'ttj.entry.png', 'flowText': '登録'},
-          {'flowNum': '02', 'flowImage': 'ttj.job2.png',      'flowText': '担当から連絡'},
-          {'flowNum': '03', 'flowImage': 'ttj.talk.png', 'flowText': '打ち合わせ'},
-          {'flowNum': '04', 'flowImage': 'ttj.joblist.png', 'flowText': '案件紹介'},
-          {'flowNum': '05', 'flowImage': 'アセット 4.png', 'flowText': 'クライアントへ<br class="u-hidden-sp">提案'},
-          {'flowNum': '06', 'flowImage': 'ttj.talk2.png', 'flowText': 'エンジニア、クライアント打ち合わせ'},
-          {'flowNum': '07', 'flowImage': 'ttj.jobstart.png', 'flowText': '業務開始'},
+          {'flowNum': '01', 'flowImage': 'icon_flow1.png', 'flowText': '登録'},
+          {'flowNum': '02', 'flowImage': 'icon_flow2.png', 'flowText': '担当から連絡'},
+          {'flowNum': '03', 'flowImage': 'icon_flow3.png', 'flowText': '打ち合わせ'},
+          {'flowNum': '04', 'flowImage': 'icon_flow4.png', 'flowText': '案件紹介'},
+          {'flowNum': '05', 'flowImage': 'icon_flow5.png', 'flowText': 'クライアントへ<br class="u-hidden-sp">提案'},
+          {'flowNum': '06', 'flowImage': 'icon_flow6.png', 'flowText': 'エンジニア、<br class="u-hidden-sp">クライアント打ち合わせ'},
+          {'flowNum': '07', 'flowImage': 'icon_flow7.png', 'flowText': '業務開始'},
         ]; %>
         <% for (var i = 0; i < flow.length; i++) { %>
         <li class="p-top-flowUpToWork__list">
@@ -136,7 +136,7 @@ src/ejs/template/_head %>
         <% for (var m = 0; m < category.length; m++) { %>
         <li class="p-top-pieItem">
           <h2 class="p-top-pieItem__category"><%= categories[m].heading %></h2>
-          <p class="p-top-pieItem__image"><img src="<%= imgPath %><%= categories[m].img %>.png" alt="開発言語 画像"></p>
+          <p class="p-top-pieItem__image"><img src="<%= imgPath %>img_graph_<%= categories[m].img %>.png" alt="開発言語 画像"></p>
         </li>
         <% } %>
       </ul>
@@ -235,12 +235,13 @@ src/ejs/template/_head %>
 
   <div class="p-top-entry">
     <div class="p-top-entry__mask">
+      <img src="<%= imgPath %>logo_ttj.png" class="p-top-entry__companyLogo" alt="サービス名のロゴ">
       <p class="p-top-entry__text">
         まずはお気軽に、<br><span class="p-top-entry__text--line">LINE</span><br>にてご登録下さい！
       </p>
       <div class="p-top-entry__btn">
         <a class="c-btn-square__toLINE" href="https://lin.ee/Os4sS5W">
-          <img src="<%= imgPath %>LINE_APP.png" class="c-btn-lineIcon" alt="LINEのロゴ">
+          <img src="<%= imgPath %>icon_line.png" class="c-btn-lineIcon" alt="LINEのロゴ">
           LINE公式アカウントを登録する
         </a>
       </div>
