--- a/src/ejs/template/_footer.ejs
+++ b/src/ejs/template/_footer.ejs
@@ -2,12 +2,13 @@
 
 <footer class="l-footerPC" id="footer">
   <div class="c-footerPC-company">
-    <img src="<%= img_path %>trust.png" class="c-footerPC-company__logo" alt="フッターのロゴ画像">
+    <img src="<%= img_path %>logo_ttj.png" class="c-footerPC-company__logo" alt="サービス名のロゴ画像">
     <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
   <div class="c-footerPC-corporate">
     <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
-      <img src="<%= img_path %>ttj.banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+      <img src="<%= img_path %>img_ttj_banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+      <p class="c-footerPC-corporate__linkText">トラストコーポレーション</p>
     </a>
   </div>
 </footer>
@@ -15,9 +16,9 @@
 <footer  class="l-footerSP" id="footer">
   <p class="c-footerSP-text">↓弊社概要は下記をクリック↓</p>
   <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
-    <img src="<%= img_path %>ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+    <img src="<%= img_path %>img_ttj_banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
   </a>
-  <img src="<%= img_path %>trust.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
+  <img src="<%= img_path %>logo_ttj.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
